--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -112,7 +112,7 @@
 
 
           <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/workforce.jpg" class="img-fluid">
+            <img src="img/workforce.jpg" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
