--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     );
                 }
               </script>
-              <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+              <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
             </li>
       </nav><!-- #nav-menu-container -->
     </div>
