--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Volunteer</h2>
-                <p>Find volunteering opporunitites near you!</p>
+                <p>Find volunteering opportunities near you!</p>
                 <a href="Volunteer.html" class="btn-get-started scrollto">Get Involved</a>
               </div>
             </div>
