--- a/Donation.html
+++ b/Donation.html
@@ -92,7 +92,7 @@
           <h3>Monetary Donations</h3>
           <p>Please fill in the fields below in order for us to process your donation.</p>
         </header>
-	      <iframe src="https://givebutter.com/embed/c/0gOVrV" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script> <br>
+	      <iframe src="https://givebutter.com/embed/c/0gOVrV" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script> <br> <br>
 <div id="paypal-button-container"></div>
 <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script>
 <script>
