--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="carousel-background"><img src="img/resources.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Resources</h2>
+                <h2>NVFS Directory</h2>
                 <p>Lookup phone numbers, find contact information, and locations.</p>
                 <a href="Resources.html" class="btn-get-started scrollto">Access Resources</a>
               </div>
