--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -211,7 +211,7 @@
             $.getJSON(url, function(result) {
                 console.log(result);
                 $.each(result, function(i, field) {
-				if(field.id == 9){
+				if(field.ID == 9){
 				          console.log(" Do I reach here");
                     document.getElementById("name").innerHTML = field.name;
                     document.getElementById("email").innerHTML = field.email;
@@ -224,7 +224,7 @@
 					var strLink = "https://maps.google.com/?q=1200" + field.address;
 					document.getElementById("address").setAttribute("href",strLink);
              }
-			 if(field.id == 10){
+			 if(field.ID == 10){
 			      console.log(" Do I reach here");
                     document.getElementById("name2").innerHTML = field.name;
                     document.getElementById("email2").innerHTML = field.email;
@@ -237,7 +237,7 @@
 					var strLink = "https://maps.google.com/?q=1200" + field.address;
 					document.getElementById("address2").setAttribute("href",strLink);
 			 }
-			 		 if(field.id == 11){
+			 		 if(field.ID == 11){
 			      console.log(" Do I reach here");
                     document.getElementById("name3").innerHTML = field.name;
                     document.getElementById("email3").innerHTML = field.email;
