--- a/About.html
+++ b/About.html
@@ -119,7 +119,7 @@
 		  and to promote community cooperation and support in responding to family needs.
 		  </p>
           <!--<div class="img">
-            <img src="img/ECD.jpg" alt="" class="img-fluid">
+            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/ECD.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
