--- a/Contact.html
+++ b/Contact.html
@@ -125,7 +125,7 @@
 		  Phone Number: <a href="tel:7032371910">703.237.1910</a>
 		  </p>
           <!--<div class="img">
-            <img src="img/ECD.jpg" alt="" class="img-fluid">
+            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/ECD.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
