--- a/EarlyChildhoodDev.html
+++ b/EarlyChildhoodDev.html
@@ -104,7 +104,7 @@
           <p>We believe every child deserves the necessary tools to build a healthy, successful life. And we believe that every parent or caregiver deserves the support and resources to provide those tools.</br></br> By providing young children with the early reading and math skills they need to be successful in school, and educating their parents or caregivers on the social and cognitive development that happens in early childhood, we are building strong foundations for Northern Virginia’s youngest residents. This two-fold approach enables children and their parents to create healthy, successful futures. <br><br>The strength of the Northern Virginia community begins with children and their cognitive, emotional and physical well-being.</p>
 
           <div class="img">
-            <img src="img/ECD.jpg" alt="" class="img-fluid">
+            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/ECD.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
