--- a/EarlyHeadStart.html
+++ b/EarlyHeadStart.html
@@ -111,7 +111,7 @@
         </p>
 
           <div class="img">
-            <img src="img/EHS.jpg" alt="" class="img-fluid">
+            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/EHS.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
