--- a/HeadStart.html
+++ b/HeadStart.html
@@ -101,7 +101,7 @@
           </p>
 
           <div class="img">
-            <img src="img/HS.jpg" alt="" class="img-fluid">
+            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/HS.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
