--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
   
   <!-- Social Media Icon Library-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -47,7 +47,7 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -103,7 +103,7 @@
         <div class="carousel-inner" role="listbox">
 
           <div class="carousel-item active">
-            <div class="carousel-background"><img src="img/family.jpg" alt=""></div>
+            <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/family.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Our Mission</h2>
@@ -113,7 +113,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/resources.jpg" alt=""></div>
+            <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/resources.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>NVFS Directory</h2>
@@ -124,7 +124,7 @@
           </div>
           
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/services.jpg" alt=""></div>
+            <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/services.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Services</h2>
@@ -135,7 +135,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/donate.jpg" alt=""></div>
+            <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/donate.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Donate</h2>
@@ -147,7 +147,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/volunteer.jpg" alt=""></div>
+            <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/volunteer.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Volunteer</h2>
@@ -158,7 +158,7 @@
           </div>
           
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/socialmedia.jpg" alt=""></div>
+            <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/socialmedia.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Connect With Us!</h2>
