--- a/read.html
+++ b/read.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -59,7 +59,7 @@
       <div id="logo" class="pull-left">
         <h1><a href="#intro" class="scrollto">NVFS</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/logo.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
