--- a/youth_initiatives.html
+++ b/youth_initiatives.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -44,7 +44,7 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -103,7 +103,7 @@
           <h4><center>Helping teenagers build healthy, successful futures</center></h4>
           <p>NVFS’ Youth Initiatives programs provide teenagers and young adults with the skills and resources needed to build healthier well-being – at school, at home and within their communities. This includes connections to healthy activities as well as the skills to build and maintain healthy relationships with friends and family. Providing our youth with these tools helps them build brighter futures not only for themselves, but for their community as well.</p>
 <div class="img">
-            <img src="img/youth.jpg" alt="" class="img-fluid">
+            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/youth.jpg" alt="" class="img-fluid">
           </div>
 
           </br></br> <h4><center>Our Programs</center></h4>
