--- a/workTest.html
+++ b/workTest.html
@@ -45,7 +45,7 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs//nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
