--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -46,7 +46,7 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -113,7 +113,7 @@
 
 
           <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/workforce.jpg" class="img-fluid">
+            <img src="img/workforce.jpg" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
@@ -122,7 +122,7 @@
               <strong><font color="white"><div id="name"></div></font></strong><br>
               <font color="white"><div id="title"></div></font><br><br>
               <font color="white"><a id="email" href="#" ></a><br><a id="phone" href="#"></a><br></font>
-              <font color="white"><a id="address" href="#"><a id="address1.1" href="#"></a></a></font><br>
+              <font color="white"><a id="address" href="#"><a id="address1.1" href="#"><script>var temp = ""; document.getElementById("address").innerHTML = temp;</script></a></a></font><br>
 			  
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
@@ -131,7 +131,7 @@
           <br>
 
           <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/VFC.jpg" alt="" class="img-fluid">
+            <img src="img/VFC.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
@@ -222,9 +222,9 @@
 					var strLink = "tel:" + field.phone;
 					document.getElementById("phone").setAttribute("href",strLink);
                     document.getElementById("address").innerHTML = field.address;
-          var strLink = "https://maps.google.com/?q=" + field.address;
-					document.getElementById("address").setAttribute("href",strLink);
           var strLink = "https://maps.apple.com/?q=" + field.address;
+					document.getElementById("address").setAttribute("href",strLink);
+          var strLink = "https://maps.google.com/?q=" + field.address;
 					document.getElementById("address1.1").setAttribute("href",strLink);
              }
 			 if(field.ID == 10){
@@ -238,10 +238,11 @@
 					var strLink = "tel:" + field.phone;
 					document.getElementById("phone2").setAttribute("href",strLink);
                     document.getElementById("address2").innerHTML = field.address;
-          var strLink = "https://maps.google.com/?q=" + field.address;
-					  document.getElementById("address2").setAttribute("href",strLink);
           var strLink = "https://maps.apple.com/?q=" + field.address;
-				  	document.getElementById("address2.1").setAttribute("href",strLink);
+				  	document.getElementById("address2").setAttribute("href",strLink);
+          var strLink = "https://maps.google.com/?q=" + field.address;
+					  document.getElementById("address2.1").setAttribute("href",strLink);
+          
 			 }
 			 		 if(field.ID == 11){
 			      console.log(" Do I reach here");
