--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -122,7 +122,7 @@
               <strong><font color="white"><div id="name"></div></font></strong><br>
               <font color="white"><div id="title"></div></font><br><br>
               <font color="white"><a id="email" href="#" ></a><br><a id="phone" href="#"></a><br></font>
-              <font color="white"><a id="address" href="#"><a id="address1.1" href="#"><script>var temp = ""; document.getElementById("address").innerHTML = temp;</script></a></a></font><br>
+              <font color="white"><a id="address" href="#"><a id="address1.1" href="#"></a></a></font><br>
 			  
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
