--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li class="menu-active"><a href="Resources.html">NVFS Directory</a></li>
+          <li class="menu-active"><a href="directory.html">Directory</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
@@ -116,7 +116,7 @@
             <div class="carousel-background"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/resources.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>NVFS Directory</h2>
+                <h2>Directory</h2>
                 <p>Lookup phone numbers, find contact information, and locations.</p>
                 <a href="Resources.html" class="btn-get-started scrollto">Access Resources</a>
               </div>
