--- a/read.html
+++ b/read.html
@@ -65,7 +65,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-	  <li class="menu-active"><a href="Resources.html">Resources</a></li>
+	  <li class="menu-active"><a href="directory.html">Directory</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
