--- a/MentalHealth.html
+++ b/MentalHealth.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -44,13 +44,13 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-	  <li class="menu-active"><a href="directory.html">Directory</a></li>
+	  <li class="menu-active"><a href="Resources.html">Resources</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
@@ -105,14 +105,16 @@
           </br></br> NVFS provides culturally competent, language-specific mental health services for all ages in various settings to ensure neighbors from all backgrounds have access to the support they need. Services are provided at NVFS offices and integrated into home, school and community settings, and include individual, family and group counseling, and mental health treatment and evaluation. These services are tailored to meet the developmental, cultural, language and relational needs of the client and their family system.</p>
 
           <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/mental-health.jpg" alt="" class="img-fluid">
+            <img src="img/mental-health.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
-              <font color="white"><a href="mailto:info@nvfs.org">info@nvfs.org</a> <p><a href="tel:5717482500">571.748.2500</a></p></font>
-              
+              <!--<font color="white"><a href="mailto:info@nvfs.org">info@nvfs.org</a> <p><a href="tel:5717482500">571.748.2500</a></p></font>
+              -->
+              <font color="white"><a id="email" href="#"></a></font><br>
+              <font color="white"><a id="phone" href="#"></a></font><br><br>
               <a class="cta-btn" href="https://www.nvfs.org/get-assistance/">Get Assistance</a>
             </div>
           </section>
@@ -177,4 +179,27 @@
   <script src="js/main.js"></script>
 
 </body>
+<script type="text/javascript">
+	
+  $(document).ready(function() {
+      var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
+      $.getJSON(url, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+  if(field.ID == 25){
+            console.log(" Do I reach here");
+    document.getElementById("email").innerHTML = field.email;
+    var strLink = "mailto:" + field.email;
+      document.getElementById("email").setAttribute("href",strLink);
+    document.getElementById("phone").innerHTML = field.phone;	
+    var strLink = "tel:" + field.phone;
+      document.getElementById("phone").setAttribute("href",strLink);
+       }
+ else{
+ return true;
+ }
+          });
+      });
+  });
+</script>
 </html>
