--- a/youth_initiatives.html
+++ b/youth_initiatives.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -44,13 +44,13 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-	  <li class="menu-active"><a href="directory.html">Directory</a></li>
+	  <li class="menu-active"><a href="Resources.html">Resources</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
@@ -103,7 +103,7 @@
           <h4><center>Helping teenagers build healthy, successful futures</center></h4>
           <p>NVFS’ Youth Initiatives programs provide teenagers and young adults with the skills and resources needed to build healthier well-being – at school, at home and within their communities. This includes connections to healthy activities as well as the skills to build and maintain healthy relationships with friends and family. Providing our youth with these tools helps them build brighter futures not only for themselves, but for their community as well.</p>
 <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/youth.jpg" alt="" class="img-fluid">
+            <img src="img/youth.jpg" alt="" class="img-fluid">
           </div>
 
           </br></br> <h4><center>Our Programs</center></h4>
@@ -115,9 +115,14 @@
 <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
-              <strong><font color="white">Megan Palanci</font></strong><br>
+              <!--<strong><font color="white">Megan Palanci</font></strong><br>
               <font color="white">Housing Counselor II</font><br><br>
               <font color="white"><a href="mailto:ztapia@nvfs.org">mpalanci@nvfs.org</a> / <a href="tel:5717482588">(571)748-2588</a></font><br><br>
+              -->
+              <strong><font color = "white"><a id="name"></a></font></strong>
+              <font color="white"><a id="title"></a></font><br>
+              <font color="white"><a id="email" href="#"></a></font><br>
+              <font color="white"><a id="phone" href="#"></a></font>
             </div>
           </section>
           
@@ -167,4 +172,29 @@
   <script src="js/main.js"></script>
 
 </body>
+<script type="text/javascript">
+	
+  $(document).ready(function() {
+      var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
+      $.getJSON(url, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+  if(field.ID == 26){
+            console.log(" Do I reach here");
+              document.getElementById("name").innerHTML = field.name;
+              document.getElementById("title").innerHTML = field.title;
+              document.getElementById("email").innerHTML = field.email;
+    var strLink = "mailto:" + field.email;
+    document.getElementById("email").setAttribute("href",strLink);
+              document.getElementById("phone").innerHTML = field.phone;	
+    var strLink = "tel:" + field.phone;
+    document.getElementById("phone").setAttribute("href",strLink);
+       }
+ else{
+ return true;
+ }
+          });
+      });
+  });
+</script>
 </html>
