--- a/youth_initiatives.html
+++ b/youth_initiatives.html
@@ -119,7 +119,7 @@
               <font color="white">Housing Counselor II</font><br><br>
               <font color="white"><a href="mailto:ztapia@nvfs.org">mpalanci@nvfs.org</a> / <a href="tel:5717482588">(571)748-2588</a></font><br><br>
               -->
-              <strong><font color = "white"><a id="name"></a></font></strong>
+              <strong><font color = "white"><a id="name"></a></font></strong><br>
               <font color="white"><a id="title"></a></font><br>
               <font color="white"><a id="email" href="#"></a></font><br>
               <font color="white"><a id="phone" href="#"></a></font>
